fix(#3): try fix shift window when open form

--- a/src/ui-kit/modal/modal.module.css
+++ b/src/ui-kit/modal/modal.module.css
@@ -10,6 +10,7 @@
   margin: auto;
   max-width: 1200px;
   width: max-content;
+  scrollbar-width: none;
 }
 
 
